change link color

--- a/src/styles/colours.scss
+++ b/src/styles/colours.scss
@@ -8,6 +8,13 @@ body {
     --border: rgb(235, 235, 235);
     --header-height: 80px;
     --border-radius: 8px;
+    --link-color: rgb(24, 24, 219);
+    --link-color: rgb(49, 79, 162);
+    --code-background: #f5f5f5;
+    --code-border-color: rgb(230, 230, 230);
+    // --primary-color: rgb(47, 108, 164);
+    --primary-color: rgb(24, 24, 219);
+    --primary-color: rgb(49, 79, 162);
 }
 
 body.dark {
