--- a/src/templates/blog.module.scss
+++ b/src/templates/blog.module.scss
@@ -48,35 +48,40 @@
     }
 
     a {
-        color: rgb(75, 110, 153);
+        color: var(--link-color);
         font-weight: 600;
-        padding: 3px 5px;
-        text-decoration: none;
-        background-image: linear-gradient(
-            transparent 0%,
-            transparent calc(50% - 2px),
-            rgb(75, 110, 153) calc(50% - 2px),
-            rgb(75, 110, 153) 100%
-        );
-        background-size: 100% 200%;
-
-        &:hover {
-            color: white;
-            background-image: linear-gradient(
-                transparent 0%,
-                transparent calc(50% - 2px),
-                rgb(75, 110, 153) calc(50% - 2px),
-                rgb(75, 110, 153) 100%
-            );
-            background-position: 0px 100%;
-            transition: 0.3s;
-        }
-
-        &.link-active {
-            font-size: 20px;
-            font-weight: 600;
-        }
     }
+
+    // a {
+    //     color: rgb(75, 110, 153);
+    //     font-weight: 600;
+    //     padding: 3px 5px;
+    //     text-decoration: none;
+    //     background-image: linear-gradient(
+    //         transparent 0%,
+    //         transparent calc(50% - 2px),
+    //         rgb(75, 110, 153) calc(50% - 2px),
+    //         rgb(75, 110, 153) 100%
+    //     );
+    //     background-size: 100% 200%;
+
+    //     &:hover {
+    //         color: white;
+    //         background-image: linear-gradient(
+    //             transparent 0%,
+    //             transparent calc(50% - 2px),
+    //             rgb(75, 110, 153) calc(50% - 2px),
+    //             rgb(75, 110, 153) 100%
+    //         );
+    //         background-position: 0px 100%;
+    //         transition: 0.3s;
+    //     }
+
+    //     &.link-active {
+    //         font-size: 20px;
+    //         font-weight: 600;
+    //     }
+    // }
 }
 
 .anchor {
