--- a/src/pages/blog.module.scss
+++ b/src/pages/blog.module.scss
@@ -10,11 +10,13 @@
         color: var(--text-primary);
     }
 
-    > div {
+    > ol {
         display: flex;
         flex-direction: column;
         justify-content: center;
         width: 100%;
+        margin: 0;
+        padding: 0;
 
         a {
             display: flex;
