--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,7 +9,7 @@ html {
 }
 body {
     margin: 0;
-    // -webkit-font-smoothing: antialiased;
+    -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     background-color: var(--background);
 }
@@ -130,7 +130,7 @@ textarea {
     margin: 0;
 }
 optgroup {
-    font-weight: 600;
+    font-weight: 700;
 }
 button,
 input {
@@ -251,7 +251,7 @@ h1 {
     font-family: "Inter", -apple-system, BlinkMacSystemFont, Segoe UI, Inter,
         Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
         sans-serif;
-    font-weight: 600;
+    font-weight: 700;
     text-rendering: optimizeLegibility;
     font-size: 2.25rem;
     line-height: 1.1;
@@ -273,7 +273,7 @@ h2 {
     font-family: "Inter", -apple-system, BlinkMacSystemFont, Segoe UI, Inter,
         Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
         sans-serif;
-    font-weight: 600;
+    font-weight: 700;
     text-rendering: optimizeLegibility;
     font-size: 1.62671rem;
     line-height: 1.5;
@@ -295,7 +295,7 @@ h3 {
     font-family: "Inter", -apple-system, BlinkMacSystemFont, Segoe UI, Inter,
         Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
         sans-serif;
-    font-weight: 600;
+    font-weight: 700;
     text-rendering: optimizeLegibility;
     font-size: 1.38316rem;
     line-height: 1.1;
@@ -313,7 +313,7 @@ h4 {
     font-family: "Inter", -apple-system, BlinkMacSystemFont, Segoe UI, Inter,
         Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
         sans-serif;
-    font-weight: 600;
+    font-weight: 700;
     text-rendering: optimizeLegibility;
     font-size: 1rem;
     line-height: 1.1;
@@ -331,7 +331,7 @@ h5 {
     font-family: "Inter", -apple-system, BlinkMacSystemFont, Segoe UI, Inter,
         Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
         sans-serif;
-    font-weight: 600;
+    font-weight: 700;
     text-rendering: optimizeLegibility;
     font-size: 0.85028rem;
     line-height: 1.1;
@@ -349,7 +349,7 @@ h6 {
     font-family: "Inter", -apple-system, BlinkMacSystemFont, Segoe UI, Inter,
         Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
         sans-serif;
-    font-weight: 600;
+    font-weight: 700;
     text-rendering: optimizeLegibility;
     font-size: 0.78405rem;
     line-height: 1.1;
@@ -534,16 +534,16 @@ address {
     margin-bottom: 1.45rem;
 }
 b {
-    font-weight: 600;
+    font-weight: 700;
 }
 strong {
-    font-weight: 600;
+    font-weight: 700;
 }
 dt {
-    font-weight: 600;
+    font-weight: 700;
 }
 th {
-    font-weight: 600;
+    font-weight: 700;
 }
 li {
     margin-bottom: calc(1.45rem / 2);
@@ -641,7 +641,7 @@ code {
     // padding-top: 0.2em;
     // padding-bottom: 0.2em;
     padding: 3px 6px;
-    // font-weight: 600;
+    // font-weight: 700;
 }
 pre code {
     background: none;
