--- a/src/styles/colours.scss
+++ b/src/styles/colours.scss
@@ -1,6 +1,6 @@
 body {
     --background: white;
-    --text-primary: hsla(0, 0%, 0%, 0.8);
+    --text-primary: hsla(0, 0%, 0%, 0.9);
     --text-secondary: rgb(110, 110, 110);
     --button-color: white;
     --button-background: rgb(75, 110, 153);
@@ -9,11 +9,11 @@ body {
     --header-height: 80px;
     --border-radius: 8px;
     --link-color: rgb(24, 24, 219);
-    --link-color: rgb(49, 79, 162);
+    --link-color: #3546e5;
+    // --link-color: rgb(49, 79, 162);
     --code-background: #f5f5f5;
     --code-border-color: rgb(230, 230, 230);
-    --primary-color: rgb(24, 24, 219);
-    --primary-color: rgb(49, 79, 162);
+    --primary-color: var(--link-color);
 }
 
 body.dark {
