use CSS variable

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -217,7 +217,7 @@ html {
     box-sizing: inherit;
 }
 body {
-    color: hsla(0, 0%, 0%, 0.8);
+    color: var(--text-primary);
     font-family: "Inter", -apple-system, sans-serif;
     font-weight: normal;
     word-wrap: break-word;
