--- a/src/components/newsletter.module.scss
+++ b/src/components/newsletter.module.scss
@@ -73,7 +73,7 @@
         width: 220px;
         border: none;
         margin-top: 15px;
-        // font-weight: 700;
+        font-weight: 500;
         border-radius: var(--border-radius);
 
         // &:hover {
