--- a/src/components/navbar.module.scss
+++ b/src/components/navbar.module.scss
@@ -11,7 +11,7 @@
         a {
             text-decoration: none;
             color: var(--text-primary);
-            // font-weight: 700;
+            // font-weight: 500;
 
             @media (max-width: 750px) {
                 // font-weight: 700;
@@ -34,6 +34,7 @@
                 padding: 0;
                 border-radius: 3px;
                 color: var(--text-primary);
+                font-weight: 500;
             }
 
             a:hover {
