amend link styling

--- a/src/pages/about.module.scss
+++ b/src/pages/about.module.scss
@@ -45,6 +45,12 @@ code {
     a {
         color: var(--link-color);
         font-weight: 700;
+        text-decoration: none;
+
+        &:hover {
+            transition: 0.3s;
+            text-decoration: underline;
+        }
     }
 
     // a {
