--- a/src/pages/blog.module.scss
+++ b/src/pages/blog.module.scss
@@ -51,6 +51,7 @@
                     font-size: 18px;
                     // color: var(--text-secondary);
                     line-height: 1.7em;
+                    font-weight: 500;
                 }
 
                 &:first-child {
