--- a/src/styles/prism-modified.css
+++ b/src/styles/prism-modified.css
@@ -159,3 +159,17 @@ pre[class*="language-"] {
 .token.entity {
     cursor: help;
 }
+
+.language-text {
+    color: #c20202 !important;
+}
+
+.gatsby-highlight-code-line {
+    background-color: #fcfcfc;
+    display: block;
+    margin-right: -1em;
+    margin-left: -1em;
+    padding-right: 1em;
+    padding-left: 0.75em;
+    border-left: 0.25em solid #f99;
+}
