--- a/src/styles/prism-modified.css
+++ b/src/styles/prism-modified.css
@@ -7,7 +7,7 @@
 code[class*="language-"],
 pre[class*="language-"] {
     color: black;
-    font-weight: normal;
+    font-weight: inherit;
     background: none;
     /* text-shadow: 0 1px white; */
     font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
@@ -165,7 +165,8 @@ pre[class*="language-"] {
 }
 
 .gatsby-highlight-code-line {
-    background-color: #fcfcfc;
+    /* background-color: #fcfcfc; */
+    background-color: var(--background);
     display: block;
     margin-right: -1em;
     margin-left: -1em;
