--- a/gatsby/src/components/footer.module.scss
+++ b/gatsby/src/components/footer.module.scss
@@ -41,3 +41,20 @@
         }
     }
 }
+
+@media only screen and (max-width: 480px) {
+    .footer {
+        flex-direction: column-reverse;
+        p {
+            margin-right: 0;
+            margin-top: 8px;
+        }
+        ul {
+            li {
+                a {
+                    justify-content: center;
+                }
+            }
+        }
+    }
+}
