align icons to the left on mobile

--- a/gatsby/src/components/footer.module.scss
+++ b/gatsby/src/components/footer.module.scss
@@ -54,7 +54,7 @@
         ul {
             li {
                 a {
-                    justify-content: center;
+                    justify-content: start;
                 }
             }
         }
